Use existing color variables

--- a/portal-frontend/src/styles/form-controls.scss
+++ b/portal-frontend/src/styles/form-controls.scss
@@ -69,7 +69,7 @@ input.mat-input-element:disabled::placeholder {
 
 .mat-mdc-select.mat-mdc-select-disabled {
   .mat-mdc-select-placeholder {
-    color: colors.$mat-input-placeholder-color-disabled;
+    color: colors.$grey;
   }
 }
 
