--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/pofo-details/pofo-details.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/pofo-details/pofo-details.component.html
@@ -5,16 +5,16 @@
   <div class="grid-double">
     {{ _applicationSubmission.soilIsNOIFollowUp ? 'Yes' : 'No' }}
   </div>
-  <div *ngIf="_applicationSubmission.soilIsNOIFollowUp" class="subheading2 grid-1">Notice of Intent (NOI) ID</div>
-  <div *ngIf="_applicationSubmission.soilIsNOIFollowUp" class="grid-double">
+  <div *ngIf="_applicationSubmission.soilNOIIDs" class="subheading2 grid-1">Notice of Intent (NOI) ID</div>
+  <div class="grid-double">
     {{ _applicationSubmission.soilNOIIDs }}
   </div>
   <div class="subheading2 grid-1">Does this proposal have previous ALC authorization?</div>
   <div class="grid-double">
     {{ _applicationSubmission.soilHasPreviousALCAuthorization ? 'Yes' : 'No' }}
   </div>
-  <div *ngIf="_applicationSubmission.soilHasPreviousALCAuthorization" class="subheading2 grid-1">Application ID</div>
-  <div *ngIf="_applicationSubmission.soilHasPreviousALCAuthorization" class="grid-double">
+  <div *ngIf="_applicationSubmission.soilApplicationIDs" class="subheading2 grid-1">Application ID</div>
+  <div class="grid-double">
     {{ _applicationSubmission.soilApplicationIDs }}
   </div>
   <div class="subheading2 grid-1">What is the purpose of the proposal?</div>
@@ -22,50 +22,50 @@
     <span>{{ _applicationSubmission.soilPurpose }}</span>
   </div>
 
-  <div class="subheading1 full-width">Soil to be Removed</div>
+  <div class="subheading1 full-width">Fill to be Placed</div>
   <div class="full-width soil-table">
     <div class="grid-1"><strong>Volume</strong></div>
     <div class="grid-2">
-      {{ _applicationSubmission.soilToRemoveVolume }}
-      <span *ngIf="_applicationSubmission.soilToRemoveVolume">m<sup>3</sup></span>
+      {{ _applicationSubmission.soilToPlaceVolume }}
+      <span *ngIf="_applicationSubmission.soilToPlaceVolume">m<sup>3</sup></span>
     </div>
     <div class="grid-1"><strong>Area</strong></div>
     <div class="grid-2">
-      {{ _applicationSubmission.soilToRemoveArea }} <span *ngIf="_applicationSubmission.soilToRemoveArea">ha</span>
+      {{ _applicationSubmission.soilToPlaceArea }} <span *ngIf="_applicationSubmission.soilToPlaceArea">ha</span>
     </div>
     <div class="grid-1"><strong>Maximum Depth</strong></div>
     <div class="grid-2">
-      {{ _applicationSubmission.soilToRemoveMaximumDepth }}
-      <span *ngIf="_applicationSubmission.soilToRemoveMaximumDepth">m</span>
+      {{ _applicationSubmission.soilToPlaceMaximumDepth }}
+      <span *ngIf="_applicationSubmission.soilToPlaceMaximumDepth">m</span>
     </div>
     <div class="grid-1"><strong>Average Depth</strong></div>
     <div class="grid-2">
-      {{ _applicationSubmission.soilToRemoveAverageDepth }}
-      <span *ngIf="_applicationSubmission.soilToRemoveAverageDepth">m</span>
+      {{ _applicationSubmission.soilToPlaceAverageDepth }}
+      <span *ngIf="_applicationSubmission.soilToPlaceAverageDepth">m</span>
     </div>
   </div>
 
-  <div class="subheading1 full-width">Soil already Removed</div>
+  <div class="subheading1 full-width">Fill already Placed</div>
   <div class="full-width soil-table">
     <div class="grid-1"><strong>Volume</strong></div>
     <div class="grid-2">
-      {{ _applicationSubmission.soilAlreadyRemovedVolume }}
-      <span *ngIf="_applicationSubmission.soilAlreadyRemovedVolume">m<sup>3</sup></span>
+      {{ _applicationSubmission.soilAlreadyPlacedVolume }}
+      <span *ngIf="_applicationSubmission.soilAlreadyPlacedVolume">m<sup>3</sup></span>
     </div>
     <div class="grid-1"><strong>Area</strong></div>
     <div class="grid-2">
-      {{ _applicationSubmission.soilAlreadyRemovedArea }}
-      <span *ngIf="_applicationSubmission.soilAlreadyRemovedArea">ha</span>
+      {{ _applicationSubmission.soilAlreadyPlacedArea }}
+      <span *ngIf="_applicationSubmission.soilAlreadyPlacedArea">ha</span>
     </div>
     <div class="grid-1"><strong>Maximum Depth</strong></div>
     <div class="grid-2">
-      {{ _applicationSubmission.soilAlreadyRemovedMaximumDepth }}
-      <span *ngIf="_applicationSubmission.soilAlreadyRemovedMaximumDepth">m</span>
+      {{ _applicationSubmission.soilAlreadyPlacedMaximumDepth }}
+      <span *ngIf="_applicationSubmission.soilAlreadyPlacedMaximumDepth">m</span>
     </div>
     <div class="grid-1"><strong>Average Depth</strong></div>
     <div class="grid-2">
-      {{ _applicationSubmission.soilAlreadyRemovedAverageDepth }}
-      <span *ngIf="_applicationSubmission.soilAlreadyRemovedAverageDepth">m</span>
+      {{ _applicationSubmission.soilAlreadyPlacedAverageDepth }}
+      <span *ngIf="_applicationSubmission.soilAlreadyPlacedAverageDepth">m</span>
     </div>
   </div>
 
@@ -81,9 +81,16 @@
     {{ _applicationSubmission.soilProjectDurationAmount }}
   </div>
 
-  <div class="subheading2 grid-1">Describe the type of soil proposed to be removed.</div>
+  <div class="subheading2 grid-1">
+    What alternative measures have you considered or attempted before proposing to place fill?
+  </div>
   <div class="grid-double">
-    <span>{{ _applicationSubmission.soilTypeRemoved }}</span>
+    <span>{{ _applicationSubmission.soilAlternativeMeasures }}</span>
+  </div>
+
+  <div class="subheading2 grid-1">Describe the type, origin and quality of fill proposed to be placed.</div>
+  <div class="grid-double">
+    <span>{{ _applicationSubmission.soilFillTypeToPlace }}</span>
   </div>
   <div class="subheading2 grid-1">What steps will be taken to reduce impacts to surrounding agricultural land?</div>
   <div class="grid-double">
