Improve disabled fields UI (#590)
* Change disabled dropdown selector placeholder color

* Update disabled fields background color and cursor behaviour

* Use existing color variables

* Increase disabled background color and add to toggle buttons

--- a/portal-frontend/src/styles/form-controls.scss
+++ b/portal-frontend/src/styles/form-controls.scss
@@ -67,6 +67,27 @@ input.mat-input-element:disabled::placeholder {
   color: colors.$grey;
 }
 
+.mat-mdc-select.mat-mdc-select-disabled {
+  .mat-mdc-select-placeholder {
+    color: colors.$grey;
+  }
+}
+
+.mdc-text-field.mdc-text-field--disabled {
+  background-color: rgba(colors.$grey, 0.2);
+  border-bottom-left-radius: rem(4);
+  border-bottom-right-radius: rem(4);
+}
+
+mat-form-field.mat-form-field-disabled {
+  cursor: not-allowed;
+
+  input,
+  textarea {
+    cursor: not-allowed;
+  }
+}
+
 form {
   label {
     font-weight: 700;
@@ -133,6 +154,14 @@ form {
 
     .mat-button-toggle {
       width: 100%;
+    }
+
+    .mat-button-toggle-disabled {
+      background-color: rgba(colors.$grey, 0.2);
+
+      .mat-button-toggle-button {
+        cursor: not-allowed;
+      }
     }
   }
 }
