PFRS Step 6 and Step 8

--- a/portal-frontend/src/app/features/alcs-edit-submission/alcs-edit-submission.component.html
+++ b/portal-frontend/src/app/features/alcs-edit-submission/alcs-edit-submission.component.html
@@ -128,6 +128,14 @@
         (navigateToStep)="switchStep($event)"
         (exit)="onExit()"
       ></app-pofo-proposal>
+      <app-pfrs-proposal
+        *ngIf="applicationSubmission.typeCode === 'PFRS'"
+        [$applicationSubmission]="$applicationSubmission"
+        [$applicationDocuments]="$applicationDocuments"
+        [showErrors]="showValidationErrors"
+        (navigateToStep)="switchStep($event)"
+        (exit)="onExit()"
+      ></app-pfrs-proposal>
     </div>
   </cdk-step>
   <cdk-step label="Upload Attachments">
