--- a/portal-frontend/src/app/features/edit-submission/edit-submission.component.html
+++ b/portal-frontend/src/app/features/edit-submission/edit-submission.component.html
@@ -130,6 +130,14 @@
         (navigateToStep)="onBeforeSwitchStep($event)"
         (exit)="onExit()"
       ></app-pofo-proposal>
+      <app-pfrs-proposal
+        *ngIf="applicationSubmission.typeCode === 'PFRS'"
+        [$applicationSubmission]="$applicationSubmission"
+        [$applicationDocuments]="$applicationDocuments"
+        [showErrors]="showValidationErrors"
+        (navigateToStep)="onBeforeSwitchStep($event)"
+        (exit)="onExit()"
+      ></app-pfrs-proposal>
     </div>
   </cdk-step>
   <cdk-step label="Upload Attachments">
