--- a/portal-frontend/src/app/features/edit-submission/proposal/soil-table/soil-table.component.html
+++ b/portal-frontend/src/app/features/edit-submission/proposal/soil-table/soil-table.component.html
@@ -1,9 +1,22 @@
-<div class="container">
+<div
+  class="container"
+  [ngClass]="{
+    'double-table': !!data2
+  }"
+>
   <form [formGroup]="form">
-    <div class="soil-table">
+    <div
+      class="soil-table"
+      [ngClass]="{
+        'double-table': !!data2
+      }"
+    >
       <div></div>
       <div>
         <span class="subheading1">{{ tableHeader }}</span>
+      </div>
+      <div *ngIf="!!data2">
+        <span class="subheading1">{{ tableHeader2 }}</span>
       </div>
 
       <div class="label">
@@ -25,6 +38,24 @@
         <div *ngIf="volume.invalid && (volume.dirty || volume.touched)" class="field-error">
           <mat-icon>warning</mat-icon>
           <div *ngIf="volume.errors?.['required']">This field is required</div>
+        </div>
+      </div>
+      <div *ngIf="data2">
+        <mat-form-field appearance="outline">
+          <input
+            min="0.01"
+            id="volume2"
+            mask="separator.2"
+            thousandSeparator=","
+            separatorLimit="9999999999"
+            matInput
+            formControlName="volume2"
+          />
+          <span matTextSuffix>m<sup>3</sup></span>
+        </mat-form-field>
+        <div *ngIf="volume2.invalid && (volume2.dirty || volume2.touched)" class="field-error">
+          <mat-icon>warning</mat-icon>
+          <div *ngIf="volume2.errors?.['required']">This field is required</div>
         </div>
       </div>
 
@@ -50,6 +81,24 @@
           <div *ngIf="area.errors?.['required']">This field is required</div>
         </div>
       </div>
+      <div *ngIf="!!data2">
+        <mat-form-field appearance="outline">
+          <input
+            min="0.01"
+            id="area2"
+            mask="separator.2"
+            thousandSeparator=","
+            separatorLimit="9999999999"
+            matInput
+            formControlName="area2"
+          />
+          <span matTextSuffix>ha</span>
+        </mat-form-field>
+        <div *ngIf="area2.invalid && (area2.dirty || area2.touched)" class="field-error">
+          <mat-icon>warning</mat-icon>
+          <div *ngIf="area2.errors?.['required']">This field is required</div>
+        </div>
+      </div>
 
       <div class="label">
         <label for="volume">Maximum Depth</label>
@@ -72,6 +121,24 @@
           <div *ngIf="maximumDepth.errors?.['required']">This field is required</div>
         </div>
       </div>
+      <div *ngIf="!!data2">
+        <mat-form-field appearance="outline">
+          <input
+            min="0.01"
+            id="maximumDepth2"
+            mask="separator.2"
+            thousandSeparator=","
+            separatorLimit="9999999999"
+            matInput
+            formControlName="maximumDepth2"
+          />
+          <span matTextSuffix>m</span>
+        </mat-form-field>
+        <div *ngIf="maximumDepth2.invalid && (maximumDepth2.dirty || maximumDepth2.touched)" class="field-error">
+          <mat-icon>warning</mat-icon>
+          <div *ngIf="maximumDepth2.errors?.['required']">This field is required</div>
+        </div>
+      </div>
 
       <div class="label">
         <label for="volume">Average Depth</label>
@@ -92,6 +159,24 @@
         <div *ngIf="averageDepth.invalid && (averageDepth.dirty || averageDepth.touched)" class="field-error">
           <mat-icon>warning</mat-icon>
           <div *ngIf="averageDepth.errors?.['required']">This field is required</div>
+        </div>
+      </div>
+      <div *ngIf='!!data2'>
+        <mat-form-field appearance="outline">
+          <input
+            min="0.01"
+            id="averageDepth2"
+            mask="separator.2"
+            thousandSeparator=","
+            separatorLimit="9999999999"
+            matInput
+            formControlName="averageDepth2"
+          />
+          <span matTextSuffix>m</span>
+        </mat-form-field>
+        <div *ngIf="averageDepth2.invalid && (averageDepth2.dirty || averageDepth2.touched)" class="field-error">
+          <mat-icon>warning</mat-icon>
+          <div *ngIf="averageDepth2.errors?.['required']">This field is required</div>
         </div>
       </div>
     </div>
