fix for subsequent decisions

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.html
@@ -139,7 +139,7 @@
           class="card-post-decision"
           [items]="postDecisions"
           appendTo="body"
-          placeholder="Linked Recon or Modification Request* *"
+          placeholder="Linked Recon or Modification Request *"
           bindLabel="label"
           bindValue="uuid"
           [clearable]="false"
