--- a/portal-frontend/src/app/features/application-details/pofo-details/pofo-details.component.html
+++ b/portal-frontend/src/app/features/application-details/pofo-details/pofo-details.component.html
@@ -89,31 +89,37 @@
     <div class="grid-1"><strong>Volume</strong></div>
     <div class="grid-2">
       {{ _applicationSubmission.soilAlreadyPlacedVolume }}
-      <span *ngIf="_applicationSubmission.soilAlreadyPlacedVolume">m<sup>3</sup></span>
-      <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.soilAlreadyPlacedVolume"></app-no-data>
+      <span *ngIf="_applicationSubmission.soilAlreadyPlacedVolume !== null">m<sup>3</sup></span>
+      <app-no-data
+        [showRequired]="showErrors"
+        *ngIf="_applicationSubmission.soilAlreadyPlacedVolume === null"
+      ></app-no-data>
     </div>
     <div class="grid-1"><strong>Area</strong></div>
     <div class="grid-2">
       {{ _applicationSubmission.soilAlreadyPlacedArea }}
-      <span *ngIf="_applicationSubmission.soilAlreadyPlacedArea">ha</span>
-      <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.soilAlreadyPlacedArea"></app-no-data>
+      <span *ngIf="_applicationSubmission.soilAlreadyPlacedArea !== null">ha</span>
+      <app-no-data
+        [showRequired]="showErrors"
+        *ngIf="_applicationSubmission.soilAlreadyPlacedArea === null"
+      ></app-no-data>
     </div>
     <div class="grid-1"><strong>Maximum Depth</strong></div>
     <div class="grid-2">
       {{ _applicationSubmission.soilAlreadyPlacedMaximumDepth }}
-      <span *ngIf="_applicationSubmission.soilAlreadyPlacedMaximumDepth">m</span>
+      <span *ngIf="_applicationSubmission.soilAlreadyPlacedMaximumDepth !== null">m</span>
       <app-no-data
         [showRequired]="showErrors"
-        *ngIf="!_applicationSubmission.soilAlreadyPlacedMaximumDepth"
+        *ngIf="_applicationSubmission.soilAlreadyPlacedMaximumDepth === null"
       ></app-no-data>
     </div>
     <div class="grid-1"><strong>Average Depth</strong></div>
     <div class="grid-2">
       {{ _applicationSubmission.soilAlreadyPlacedAverageDepth }}
-      <span *ngIf="_applicationSubmission.soilAlreadyPlacedAverageDepth">m</span>
+      <span *ngIf="_applicationSubmission.soilAlreadyPlacedAverageDepth !== null">m</span>
       <app-no-data
         [showRequired]="showErrors"
-        *ngIf="!_applicationSubmission.soilAlreadyPlacedAverageDepth"
+        *ngIf="_applicationSubmission.soilAlreadyPlacedAverageDepth === null"
       ></app-no-data>
     </div>
   </div>
