--- a/portal-frontend/src/app/features/application-details/roso-details/roso-details.component.html
+++ b/portal-frontend/src/app/features/application-details/roso-details/roso-details.component.html
@@ -89,31 +89,37 @@
     <div class="grid-1"><strong>Volume</strong></div>
     <div class="grid-2">
       {{ _applicationSubmission.soilAlreadyRemovedVolume }}
-      <span *ngIf="_applicationSubmission.soilAlreadyRemovedVolume">m<sup>3</sup></span>
-      <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.soilAlreadyRemovedVolume"></app-no-data>
+      <span *ngIf="_applicationSubmission.soilAlreadyRemovedVolume !== null">m<sup>3</sup></span>
+      <app-no-data
+        [showRequired]="showErrors"
+        *ngIf="_applicationSubmission.soilAlreadyRemovedVolume === null"
+      ></app-no-data>
     </div>
     <div class="grid-1"><strong>Area</strong></div>
     <div class="grid-2">
       {{ _applicationSubmission.soilAlreadyRemovedArea }}
-      <span *ngIf="_applicationSubmission.soilAlreadyRemovedArea">ha</span>
-      <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.soilAlreadyRemovedArea"></app-no-data>
+      <span *ngIf="_applicationSubmission.soilAlreadyRemovedArea !== null">ha</span>
+      <app-no-data
+        [showRequired]="showErrors"
+        *ngIf="_applicationSubmission.soilAlreadyRemovedArea === null"
+      ></app-no-data>
     </div>
     <div class="grid-1"><strong>Maximum Depth</strong></div>
     <div class="grid-2">
       {{ _applicationSubmission.soilAlreadyRemovedMaximumDepth }}
-      <span *ngIf="_applicationSubmission.soilAlreadyRemovedMaximumDepth">m</span>
+      <span *ngIf="_applicationSubmission.soilAlreadyRemovedMaximumDepth !== null">m</span>
       <app-no-data
         [showRequired]="showErrors"
-        *ngIf="!_applicationSubmission.soilAlreadyRemovedMaximumDepth"
+        *ngIf="_applicationSubmission.soilAlreadyRemovedMaximumDepth === null"
       ></app-no-data>
     </div>
     <div class="grid-1"><strong>Average Depth</strong></div>
     <div class="grid-2">
       {{ _applicationSubmission.soilAlreadyRemovedAverageDepth }}
-      <span *ngIf="_applicationSubmission.soilAlreadyRemovedAverageDepth">m</span>
+      <span *ngIf="_applicationSubmission.soilAlreadyRemovedAverageDepth !== null">m</span>
       <app-no-data
         [showRequired]="showErrors"
-        *ngIf="!_applicationSubmission.soilAlreadyRemovedAverageDepth"
+        *ngIf="_applicationSubmission.soilAlreadyRemovedAverageDepth === null"
       ></app-no-data>
     </div>
   </div>
