Remove PDF buttons from ALCS Edit Submission View

--- a/portal-frontend/src/app/features/edit-submission/review-and-submit/review-and-submit.component.html
+++ b/portal-frontend/src/app/features/edit-submission/review-and-submit/review-and-submit.component.html
@@ -8,7 +8,7 @@
   ></app-application-details>
   <div class="button-container">
     <button
-      *ngIf="applicationSubmission?.fileNumber"
+      *ngIf="applicationSubmission?.fileNumber && !draftMode"
       mat-flat-button
       color="primary"
       (click)="onDownloadPdf(applicationSubmission?.fileNumber)"
