Change file upload icon

--- a/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.html
+++ b/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.html
@@ -29,7 +29,7 @@
 >
   <div class="content">
     <div class="icon">
-      <mat-icon inline="true">cloud_upload</mat-icon>
+      <mat-icon inline="true">file_upload</mat-icon>
     </div>
     <button [disabled]="disabled" type="button" (click)="onFileUploadClicked()" mat-flat-button color="accent">
       Choose file to Upload
