Add placeholder to optional table and update class spacing

--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/application-details.component.scss
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/application-details.component.scss
@@ -1,4 +1,4 @@
-@use "../../../../../styles/colors";
+@use '../../../../../styles/colors';
 
 :host::ng-deep {
   .view-grid-item {
@@ -28,6 +28,7 @@
   .no-data-text {
     text-align: center;
     color: colors.$grey;
+    padding-top: rem(12);
 
     .error {
       justify-content: center;
