--- a/portal-frontend/src/app/features/application-details/application-details.component.scss
+++ b/portal-frontend/src/app/features/application-details/application-details.component.scss
@@ -29,6 +29,7 @@
   .no-data-text {
     text-align: center;
     color: colors.$grey;
+    padding-top: rem(12);
 
     .error {
       justify-content: center;
