added missing styling to portal statuses

--- a/portal-frontend/src/app/features/home/application-list/application-list.component.scss
+++ b/portal-frontend/src/app/features/home/application-list/application-list.component.scss
@@ -32,6 +32,12 @@
   color: colors.$grey-dark;
 }
 
+.alc-decision,
+.ceo-decision {
+  background-color: #C08106;
+  color: white;
+}
+
 .table-wrapper {
   overflow-x: auto;
 
