Update responsive styling for long file name

--- a/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.html
+++ b/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.html
@@ -7,14 +7,18 @@
         error: !!file.errorMessage
       }"
     >
-      <div class="file-name">
-        <a (click)="fileOpened(file.uuid)">{{ file.fileName }}</a>
-        <div>&ensp;({{ file.fileSize | filesize }})</div>
+      <a class="file-name" (click)="fileOpened(file.uuid)">{{ file.fileName }}</a>
+      <div class="file-size-cta-container">
+        <div class="file-size">
+          <span class="file-size-paranthesis">(</span>
+          {{ file.fileSize | filesize }}
+          <span class="file-size-paranthesis">)</span>
+        </div>
+        <button [disabled]="disabled" mat-button aria-label="Remove File" (click)="_deleteFile(file)">
+          <mat-icon>close</mat-icon>
+          REMOVE
+        </button>
       </div>
-      <button [disabled]="disabled" mat-button aria-label="Remove File" (click)="_deleteFile(file)">
-        <mat-icon>close</mat-icon>
-        REMOVE
-      </button>
     </div>
     <div class="error-message" *ngIf="!!file.errorMessage"><mat-icon>warning</mat-icon> {{ file.errorMessage }}</div>
   </ng-container>
