--- a/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.scss
+++ b/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.scss
@@ -53,7 +53,7 @@ a {
   border-radius: rem(4);
   padding: rem(8) rem(16);
   display: flex;
-  align-items: center;
+  flex-direction: column;
   flex-wrap: wrap;
   margin-top: rem(5);
   margin-bottom: rem(8);
@@ -66,14 +66,20 @@ a {
     border: 2px solid colors.$error-color;
   }
 
-  .file-name {
+  .file-size-cta-container {
+    align-items: center;
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    margin-top: rem(4);
   }
 
-  button {
-    margin-top: rem(6);
+  .file-size {
+    color: colors.$grey-dark;
+    display: flex;
+  }
+
+  .file-size-paranthesis {
+    display: none;
   }
 }
 
@@ -94,15 +100,22 @@ a {
   .mobile-file-drag-drop {
     display: none;
   }
-  .uploaded-file {
-    display: flex;
-    justify-content: space-between;
 
-    .file-name {
-      display: flex;
-      align-items: center;
-      justify-content: flex-start;
-      width: unset;
+  .file-name {
+    margin-right: rem(8) !important;
+  }
+
+  .uploaded-file {
+    align-items: center;
+    flex-direction: row;
+
+    .file-size-cta-container {
+      flex-grow: 2;
+      margin-top: unset;
+    }
+
+    .file-size-paranthesis {
+      display: block;
     }
   }
 }
