--- a/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.scss
+++ b/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.scss
@@ -78,7 +78,7 @@ a {
     display: flex;
   }
 
-  .file-size-paranthesis {
+  .file-size-parentheses {
     display: none;
   }
 }
@@ -114,7 +114,7 @@ a {
       margin-top: unset;
     }
 
-    .file-size-paranthesis {
+    .file-size-parentheses {
       display: block;
     }
   }
