Portal document upload area and optional doc table (#597)
* Update file upload styling

* Change file upload icon

* Add placeholder to optional table and update class spacing

* Update responsive styling for long file name

* Fix class name typo

--- a/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.html
+++ b/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.html
@@ -7,14 +7,18 @@
         error: !!file.errorMessage
       }"
     >
-      <div class="file-name">
-        <a (click)="fileOpened(file.uuid)">{{ file.fileName }}</a>
-        <div>&ensp;({{ file.fileSize | filesize }})</div>
+      <a class="file-name" (click)="fileOpened(file.uuid)">{{ file.fileName }}</a>
+      <div class="file-size-cta-container">
+        <div class="file-size">
+          <span class="file-size-parentheses">(</span>
+          {{ file.fileSize | filesize }}
+          <span class="file-size-parentheses">)</span>
+        </div>
+        <button [disabled]="disabled" mat-button aria-label="Remove File" (click)="_deleteFile(file)">
+          <mat-icon>close</mat-icon>
+          REMOVE
+        </button>
       </div>
-      <button [disabled]="disabled" mat-button aria-label="Remove File" (click)="_deleteFile(file)">
-        <mat-icon>close</mat-icon>
-        REMOVE
-      </button>
     </div>
     <div class="error-message" *ngIf="!!file.errorMessage"><mat-icon>warning</mat-icon> {{ file.errorMessage }}</div>
   </ng-container>
@@ -29,7 +33,7 @@
 >
   <div class="content">
     <div class="icon">
-      <mat-icon inline="true">cloud_upload</mat-icon>
+      <mat-icon inline="true">file_upload</mat-icon>
     </div>
     <button [disabled]="disabled" type="button" (click)="onFileUploadClicked()" mat-flat-button color="accent">
       Choose file to Upload
