Code Review Feedback

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.html
@@ -2,13 +2,12 @@
   <h3>Decision</h3>
   <div matTooltip="{{ disabledCreateBtnTooltip }}" [matTooltipDisabled]="!isPaused && !isDraftExists">
     <button
-      [disabled]="isPaused"
+      [disabled]="isPaused || isDraftExists"
       mat-flat-button
       color="primary"
       [routerLink]="createDecision.path ? createDecision.path : './'"
       routerLinkActive="active"
       [routerLinkActiveOptions]="{ exact: false }"
-      [disabled]="isDraftExists"
     >
       + Create Draft Decision
     </button>
