--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.scss
@@ -1,62 +1,78 @@
 @use '../../../../../../styles/colors.scss';
 
-.grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-column-gap: 24px;
-  grid-row-gap: 24px;
-}
+:host::ng-deep {
+  .grid,
+  .grid-3 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 24px;
+    grid-row-gap: 24px;
+  }
 
-.resolution-number-wrapper {
-  display: grid;
-  grid-template-columns: 1fr 16px 0.7fr;
-}
+  .grid-3 {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 24px;
+    grid-row-gap: 24px;
+  }
 
-.row,
-.btn-row {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 100%;
-  margin: 24px 0;
+  .resolution-number-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 16px 0.7fr;
+  }
 
-  .column {
+  .row,
+  .btn-row {
     display: flex;
-    flex-direction: column;
-    flex-basis: 100%;
-    flex: 1;
-  }
-
-  .release-decision-btn {
-    width: 50%;
-  }
-}
-
-.btn-row {
-  justify-content: space-between;
-}
-
-.flex-right {
-  display: flex;
-  justify-content: right;
-}
-
-.resolution-number-wrapper {
-  display: flex;
-  align-items: center;
-
-  .generate-number-btn {
+    flex-direction: row;
+    flex-wrap: wrap;
     width: 100%;
+    margin: 24px 0;
+
+    .column {
+      display: flex;
+      flex-direction: column;
+      flex-basis: 100%;
+      flex: 1;
+    }
+
+    .release-decision-btn {
+      width: 50%;
+    }
   }
 
-  .resolution-number {
+  .btn-row {
+    justify-content: space-between;
+  }
+
+  .flex-right {
+    display: flex;
+    justify-content: right;
+  }
+
+  .resolution-number-wrapper {
     display: flex;
     align-items: center;
-    font-size: 20px;
-    color: colors.$grey-dark;
 
-    .delete-icon {
-      color: colors.$error-color;
+    .generate-number-btn {
+      width: 100%;
+    }
+
+    .resolution-number {
+      display: flex;
+      align-items: center;
+      font-size: 20px;
+      color: colors.$grey-dark;
+
+      .delete-icon {
+        color: colors.$error-color;
+      }
+    }
+  }
+
+  .decision-component-form {
+    .grid-3,
+    grid {
+      margin-bottom: 24px;
     }
   }
 }
