--- a/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-entry/parcel-entry.component.html
@@ -119,7 +119,7 @@
 
     <div *ngIf="!isCrownLand">
       <label for="purchase-date">Parcel Purchase Date</label>
-      <mat-form-field class="full-width-input date-picker" appearance="outline">
+      <mat-form-field (click)="purchaseDatePicker.open()" class="full-width-input date-picker" appearance="outline">
         <input
           id="purchase-date"
           matInput
@@ -129,7 +129,7 @@
           [placeholder]="isCrownLand ? 'Fee Simple Only' : 'YYYY-MMM-DD'"
         />
         <mat-datepicker-toggle matIconSuffix [for]="purchaseDatePicker"></mat-datepicker-toggle>
-        <mat-datepicker #purchaseDatePicker startView="year"></mat-datepicker>
+        <mat-datepicker #purchaseDatePicker startView="multi-year"></mat-datepicker>
       </mat-form-field>
       <div>
         <mat-hint class="subtext"> Example: 2020-Mar-01 </mat-hint>
